--- a/index.html
+++ b/index.html
@@ -3,18 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>build-block-blueprint-web</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="build-block-blueprint-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>
+SHIKU
+INFRA PRIVATE LIMITED</title>
+    
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/src/styles.css" />
+    <script type="module" src="/src/vendor.ts"></script>
+    <script nomodule src="/src/vendor-legacy.js"></script>
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="SHIKU INFRA PRIVATE LIMITED - Your trusted partner in infrastructure solutions." />
+    <meta name="keywords" content="infrastructure, construction, engineering, SHIKU, private limited" />
+    <meta name="author" content="SHIKU INFRA PRIVATE LIMITED">
+    <meta property="og:title" content="SHIKU INFRA PRIVATE LIMITED" />
+    <meta property="og:description" content="Your trusted partner in infrastructure solutions." />
+    <meta property="og:image" content="/src/logo.png" />
+    <meta property="og:url" content="https://shikuinfra.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="SHIKU INFRA PRIVATE LIMITED" />
+    <meta name="twitter:description" content="Your trusted partner in infrastructure solutions." />
+    <meta name="twitter:image" content="/src/logo.png" />
+    <link rel="apple-touch-icon" href="/src/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" /> 
   </head>
 
   <body>
