--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 SHIKU
 INFRA PRIVATE LIMITED</title>
     
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.png" />
     <link rel="stylesheet" href="/src/styles.css" />
     <script type="module" src="/src/vendor.ts"></script>
     <script nomodule src="/src/vendor-legacy.js"></script>
